1. Fixed an error when a city could not be found 2. Started working on gradient changes depending on day/night & weather conditions

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,7 +1,7 @@
 /* main content */
 
 .hero {
-  background-color: #E5E8E8;
+  background-color: #ECF0F1;
   height: 100vh;
   width: 100%;
   display: grid; 
