--- a/css/style-global.css
+++ b/css/style-global.css
@@ -8,7 +8,7 @@
   font-family: 'Poppins', sans-serif;
 }
 body {
-  background-color: #fff;
+  background-color: #F4F6F7;
 }
 html {
   scroll-behavior: smooth;
