--- a/css/style-index.css
+++ b/css/style-index.css
@@ -58,12 +58,19 @@
   margin-top: 5%;
 }
 
-#icon {
+#icon, #dayOneIcon, #dayTwoIcon, #dayThreeIcon, #dayFourIcon, #dayFiveIcon {
   font-size: 5vw;
-  color: #fff;
   margin: 10% auto 0% auto;
   display: table;
   text-align: center;
+}
+
+#icon {
+  color: #fff;
+}
+
+#dayOneIcon, #dayTwoIcon, #dayThreeIcon, #dayFourIcon, #dayFiveIcon {
+  color: #000;
 }
 
 .city {
@@ -288,48 +295,20 @@
   margin: 1vh 1vw;
 }
 
-.dayOne { 
-  grid-area: dayOne; 
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  height: 85%;
-  border-radius: 10px;
-  visibility: hidden;
-}
+.dayOne { grid-area: dayOne; }
 
-.dayTwo { 
-  grid-area: dayTwo; 
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  height: 85%;
-  border-radius: 10px;
-  visibility: hidden;
-}
+.dayTwo { grid-area: dayTwo; }
 
-.dayThree { 
-  grid-area: dayThree; 
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  height: 85%;
-  border-radius: 10px;
-  visibility: hidden;
-}
+.dayThree { grid-area: dayThree; }
 
-.dayFour { 
-  grid-area: dayFour; 
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  height: 85%;
-  border-radius: 10px;
-  visibility: hidden;
-}
+.dayFour { grid-area: dayFour; }
 
-.dayFive { 
-  grid-area: dayFive; 
-  background-color: #21D4FD;
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+.dayFive { grid-area: dayFive; }
+
+.dayOne, .dayTwo, .dayThree, .dayFour, .dayFive {
+  background-color: #fff;
   height: 85%;
-  border-radius: 10px;
+  border-radius: 15px;
   visibility: hidden;
 }
 
