--- a/css/style-index.css
+++ b/css/style-index.css
@@ -314,7 +314,10 @@
 
 .searchBar { grid-area: searchBar; }
 .logo { grid-area: logo; }
-.weatherData { grid-area: weatherData; }
+.weatherData {
+  grid-area: weatherData;
+  visibility: hidden;
+}
 
 .dayOfWeek {
   text-align: center;
@@ -322,4 +325,19 @@
   color: #000;
   font-size: 1vw;
   font-weight: 600;
+}
+
+.chart {
+  background: white;
+  width: 100%;
+  height: 100%;
+  padding: 20px 20px 0 0;
+}
+
+svg polyline {
+  stroke: #0074d9;
+  stroke-width: 1;
+  fill: #0074d9;
+  fill-opacity: 20%;
+  width: 100%;
 }
