--- a/css/style-index.css
+++ b/css/style-index.css
@@ -14,8 +14,8 @@
 
 .content-box {
   grid-area: content-box;
-  background-color: #FFE53B;
-  background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+  background-color: #2980b9;
+  background-image: linear-gradient(147deg, #2980b9 0%, #2c3e50 100%);
   border-radius: 25px;
   margin: 10vh 5vw;
 }
