--- a/css/style-index.css
+++ b/css/style-index.css
@@ -327,17 +327,9 @@
   font-weight: 600;
 }
 
-.chart {
-  background: white;
-  width: 100%;
-  height: 100%;
-  padding: 20px 20px 0 0;
-}
-
-svg polyline {
-  stroke: #0074d9;
-  stroke-width: 1;
-  fill: #0074d9;
-  fill-opacity: 20%;
-  width: 100%;
+#tempChart {
+  height: 90%;
+  width: 95%;
+  margin: 0 auto;
+  --color: #000;
 }
