--- a/css/style-index.css
+++ b/css/style-index.css
@@ -410,7 +410,15 @@
   width: 95%;
   margin: 0 auto;
   --color: #000;
-  transition: all 0.5s;
+}
+
+.animateChart {
+  transform-origin: bottom;
+  animation: reveal-graph 4s linear;
+}
+@keyframes reveal-graph {
+  0%  { transform: scaleY(0); }
+  15% { transform: scaleY(1); }
 }
 
 tbody tr th {
