--- a/css/style-index.css
+++ b/css/style-index.css
@@ -475,15 +475,28 @@ tbody tr th {
 #listOfOptions {
   margin-left: 1.5vw;
   position: absolute;
-  top: 23vh;
+  top: 22vh;
   visibility: hidden;
   z-index: 100;
   width: 30vw;
-  height: 300px;
-  border: 3px solid #000;
-  border-radius: 25px;
-  background-color: #fff;
   margin-top: 1vh;
   transition: all 0.5s;
   opacity: 0%;
+  background-color: #ECF0F1;
+  border-radius: 5px;
+}
+
+.searchOptions {
+  width: 100%;
+  margin: 0.5vh 0px;
+  padding: 5px;
+  border-top: 0.5px solid #000;
+}
+
+.searchOptions:hover {
+  background-color: #fff;
+}
+
+.searchOptions:first-child {
+  border: none;
 }
