--- a/index.less
+++ b/index.less
@@ -7,6 +7,7 @@ https://github.com/less/less.js/blob/master/LICENSE
 //colors
 @white: #fff;
 @light-white: #ECF0F1;
+@black: #000;
 //standards
 @rad: 25px;
 
@@ -75,6 +76,21 @@ https://github.com/less/less.js/blob/master/LICENSE
         "today forecast forecast forecast"; 
       height: 100%;
 
+      #icon, #dayOneIcon, #dayTwoIcon, #dayThreeIcon, #dayFourIcon, #dayFiveIcon {
+        font-size: 5vw;
+        margin: 10% auto 0% auto;
+        display: table;
+        text-align: center;
+        }
+
+      #icon {
+       color: @white;
+      }
+
+      #dayOneIcon, #dayTwoIcon, #dayThreeIcon, #dayFourIcon, #dayFiveIcon {
+      color: @black;
+      }
+      
       .today { 
         grid-area: today; 
         height: 100%;
@@ -87,6 +103,14 @@ https://github.com/less/less.js/blob/master/LICENSE
           font-size: 4vw;
           color: @white;
           margin-top: 5%;
+        }
+
+        .city {
+          text-align: center;
+          margin: 1vh 1.5vw;
+          color: #fff;
+          font-size: 1vw;
+          font-weight: 400;
         }
       }
 
